data/derived/comb/progs/unify/prog8508.ml.out
Characters 154-176:
  | 2 -> buildSine(build(rand, depth-1))
                  ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
